crates/analyzer/tests/snapshots/errors__not_callable.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: `u256` type is not callable
  ┌─ compile_errors/not_callable.fe:4:9
  │
4 │         5()
  │         ^ this has type `u256`


